# asset-squisher

./: .gitignore  Cargo.toml  Dockerfile  README.md  gen-test-assets.sh
.github/workflows/: build.yml  check.yml
src/: main.rs
