[package]
name = "asset-squisher"
version = "0.1.0"
edition = "2021"
description = "A simple application to compress all web assits in a static file directory."

[dependencies]
image = { version = "0.25", features = ["avif"] }
thiserror = "1"
walkdir = "2"
zstd = "0.13"
brotli = "6"
flate2 = "1"
webp = "0.3"
argh = "0.1"
rayon = "1"
